--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=GBK" />
 <meta http-equiv="refresh" content="0; url=./AlgorithmGossip/AlgorithmGossip.htm">
 </head>
 </html>
