--- a/AlgorithmGossip/ArmstrongNumber.htm
+++ b/AlgorithmGossip/ArmstrongNumber.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>ªü©i´µ§§¼Æ</title>
+  <title>é˜¿å§†æ–¯å£¯æ•¸</title>
 </head>
 
 
@@ -51,18 +51,18 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ªü©i´µ§§¼Æ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: é˜¿å§†æ–¯å£¯æ•¸</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦b¤T¦ìªº¾ã¼Æ¤¤¡A¨Ò¦p153¥i¥Hº¡¨¬1<sup>3</sup> + 5<sup>3</sup> + 3<sup>3</sup> = 153¡A³o¼Ëªº¼ÆºÙ¤§¬°Armstrong¼Æ¡A¸Õ¼g¥X¤@µ{¦¡§ä¥X©Ò¦³ªº¤T¦ì¼ÆArmstrong¼Æ¡C<br>
+åœ¨ä¸‰ä½çš„æ•´æ•¸ä¸­ï¼Œä¾‹å¦‚153å¯ä»¥æ»¿è¶³1<sup>3</sup> + 5<sup>3</sup> + 3<sup>3</sup> = 153ï¼Œé€™æ¨£çš„æ•¸ç¨±ä¹‹ç‚ºArmstrongæ•¸ï¼Œè©¦å¯«å‡ºä¸€ç¨‹å¼æ‰¾å‡ºæ‰€æœ‰çš„ä¸‰ä½æ•¸Armstrongæ•¸ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-Armstrong¼Æªº´M§ä¡A¨ä¹ê´N¬O¦b°İ¦p¦ó±N¤@­Ó¼Æ¦r¤À¸Ñ¬°­Ó¦ì¼Æ¡B¤Q¦ì¼Æ¡B¦Ê¦ì¼Æ......¡A³o¥u­n¨Ï¥Î°£ªk»P¾l¼Æ¹Bºâ´N¥i¥H¤F¡A¨Ò¦p¿é¤J input¬°abc¡A«h¡G<br>
+Armstrongæ•¸çš„å°‹æ‰¾ï¼Œå…¶å¯¦å°±æ˜¯åœ¨å•å¦‚ä½•å°‡ä¸€å€‹æ•¸å­—åˆ†è§£ç‚ºå€‹ä½æ•¸ã€åä½æ•¸ã€ç™¾ä½æ•¸......ï¼Œé€™åªè¦ä½¿ç”¨é™¤æ³•èˆ‡é¤˜æ•¸é‹ç®—å°±å¯ä»¥äº†ï¼Œä¾‹å¦‚è¼¸å…¥ inputç‚ºabcï¼Œå‰‡ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">a = input / 100 </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -78,7 +78,7 @@ Armstrong¼Æªº´M§ä¡A¨ä¹ê´N¬O¦b°İ¦p¦ó±N¤@­Ó¼Æ¦r¤À¸Ñ¬°­Ó¦ì¼Æ¡B¤Q¦ì¼Æ¡B¦Ê¦ì¼Æ......¡
 
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -89,7 +89,7 @@ Armstrong¼Æªº´M§ä¡A¨ä¹ê´N¬O¦b°İ¦p¦ó±N¤@­Ó¼Æ¦r¤À¸Ñ¬°­Ó¦ì¼Æ¡B¤Q¦ì¼Æ¡B¦Ê¦ì¼Æ......¡
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;time.h&gt; <br>#include &lt;math.h&gt; <br><br>int main(void) { <br>    int a, b, c; <br>    int input; <br><br>    printf("´M§äArmstrong¼Æ¡G\n"); <br><br>    for(input = 100; input &lt;= 999; input++) { <br>        a = input / 100; <br>        b = (input % 100) / 10; <br>        c = input % 10; <br>        if(a*a*a + b*b*b + c*c*c == input) <br>            printf("%d ", input); <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;time.h&gt; <br>#include &lt;math.h&gt; <br><br>int main(void) { <br>    int a, b, c; <br>    int input; <br><br>    printf("å°‹æ‰¾Armstrongæ•¸ï¼š\n"); <br><br>    for(input = 100; input &lt;= 999; input++) { <br>        a = input / 100; <br>        b = (input % 100) / 10; <br>        c = input % 10; <br>        if(a*a*a + b*b*b + c*c*c == input) <br>            printf("%d ", input); <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 
 <br>
@@ -103,7 +103,7 @@ Armstrong¼Æªº´M§ä¡A¨ä¹ê´N¬O¦b°İ¦p¦ó±N¤@­Ó¼Æ¦r¤À¸Ñ¬°­Ó¦ì¼Æ¡B¤Q¦ì¼Æ¡B¦Ê¦ì¼Æ......¡
 </ul>
 
 
-<pre>public class Armstrong {<br>    public static void main(String[] args) {<br>        System.out.println("´M§äArmstrong¼Æ¡G"); <br><br>        for(int i = 100; i &lt;= 999; i++) { <br>                int a = i / 100; <br>                int b   = (i % 100) / 10; <br>                int c = i % 10; <br>                if(a*a*a + b*b*b + c*c*c == i) <br>                        System.out.print(i + " "); <br>        } <br><br>        System.out.println();<br>    }<br>}</pre>
+<pre>public class Armstrong {<br>    public static void main(String[] args) {<br>        System.out.println("å°‹æ‰¾Armstrongæ•¸ï¼š"); <br><br>        for(int i = 100; i &lt;= 999; i++) { <br>                int a = i / 100; <br>                int b   = (i % 100) / 10; <br>                int c = i % 10; <br>                if(a*a*a + b*b*b + c*c*c == i) <br>                        System.out.print(i + " "); <br>        } <br><br>        System.out.println();<br>    }<br>}</pre>
 
 <br>
 
