--- a/AlgorithmGossip/BigNumber.htm
+++ b/AlgorithmGossip/BigNumber.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>¶Wªø¾ã¼Æ¹Bºâ¡]¤j¼Æ¹Bºâ¡^</title>
+  <title>è¶…é•·æ•´æ•¸é‹ç®—ï¼ˆå¤§æ•¸é‹ç®—ï¼‰</title>
 </head>
 
 
@@ -41,30 +41,30 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¶Wªø¾ã¼Æ¹Bºâ¡]¤j¼Æ¹Bºâ¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: è¶…é•·æ•´æ•¸é‹ç®—ï¼ˆå¤§æ•¸é‹ç®—ï¼‰</a></h1>
 
 
 
-<h2>»¡©ú</h2>
-°ò©ó°O¾ĞÅéªº¦³®Ä¹B¥Î¡Aµ{¦¡»y¨¥¤¤³W©w¤F¦UºØ¤£¦Pªº¸ê®Æ«¬ºA¡A¤]¦]¦¹ÅÜ¼Æ©Ò¥i¥Hªí¹Fªº³Ì¤j¾ã¼Æ¨ü¨ì­­¨î¡A¨Ò¦p123456789123456789³o¼Ëªº
-¾ã¼Æ´N¤£¥i¯àÀx¦s¦blongÅÜ¼Æ¤¤¡]¨Ò¦pC/C++µ¥¡^¡A§Ú­ÌºÙ³o¬°long¼Æ¡A³oÃäÂ½¬°¶Wªø¾ã¼Æ¡]Á×§K»P¸ê®Æ«¬ºAªºªø¾ã¼ÆÂ½Ä¶²V²c¡^¡A©Î«UºÙ¤j¼Æ¹Bºâ¡C<br>
-<h2>¸Ñªk</h2>
-¤@­ÓÅÜ¼ÆµLªkªí¥Ü¶Wªø¾ã¼Æ¡A«h´N¨Ï¥Î¦h­ÓÅÜ¼Æ¡A·íµM³o¨Ï¥Î°}¦C³Ì¬°¤è«K¡A°²³]µ{¦¡»y¨¥ªº³Ì¤j¸ê®Æ«¬ºA¥i¥HÀx¦s¦Ü65535ªº¼Æ¦n¤F¡A¬°¤F­pºâ¤è«K¤Î²Å¦X¨Ï¥Î¤Q¶i¦ì¨îªº²ßºD¡AÅı¨C¤@­Ó°}¦C¤¸¯À¥i¥HÀx¦s¥|­Ó¦ì¼Æ¡A¤]´N¬O0¨ì9999ªº¼Æ¡A¨Ò¦p¡G <br>
-<div style="text-align: center;"><img style="width: 445px; height: 356px;" alt="¤j¼Æ¹Bºâ" title="¤j¼Æ¹Bºâ" src="images/bigNumber-1.jpg"><br>
+<h2>èªªæ˜</h2>
+åŸºæ–¼è¨˜æ†¶é«”çš„æœ‰æ•ˆé‹ç”¨ï¼Œç¨‹å¼èªè¨€ä¸­è¦å®šäº†å„ç¨®ä¸åŒçš„è³‡æ–™å‹æ…‹ï¼Œä¹Ÿå› æ­¤è®Šæ•¸æ‰€å¯ä»¥è¡¨é”çš„æœ€å¤§æ•´æ•¸å—åˆ°é™åˆ¶ï¼Œä¾‹å¦‚123456789123456789é€™æ¨£çš„
+æ•´æ•¸å°±ä¸å¯èƒ½å„²å­˜åœ¨longè®Šæ•¸ä¸­ï¼ˆä¾‹å¦‚C/C++ç­‰ï¼‰ï¼Œæˆ‘å€‘ç¨±é€™ç‚ºlongæ•¸ï¼Œé€™é‚Šç¿»ç‚ºè¶…é•·æ•´æ•¸ï¼ˆé¿å…èˆ‡è³‡æ–™å‹æ…‹çš„é•·æ•´æ•¸ç¿»è­¯æ··æ·†ï¼‰ï¼Œæˆ–ä¿—ç¨±å¤§æ•¸é‹ç®—ã€‚<br>
+<h2>è§£æ³•</h2>
+ä¸€å€‹è®Šæ•¸ç„¡æ³•è¡¨ç¤ºè¶…é•·æ•´æ•¸ï¼Œå‰‡å°±ä½¿ç”¨å¤šå€‹è®Šæ•¸ï¼Œç•¶ç„¶é€™ä½¿ç”¨é™£åˆ—æœ€ç‚ºæ–¹ä¾¿ï¼Œå‡è¨­ç¨‹å¼èªè¨€çš„æœ€å¤§è³‡æ–™å‹æ…‹å¯ä»¥å„²å­˜è‡³65535çš„æ•¸å¥½äº†ï¼Œç‚ºäº†è¨ˆç®—æ–¹ä¾¿åŠç¬¦åˆä½¿ç”¨åé€²ä½åˆ¶çš„ç¿’æ…£ï¼Œè®“æ¯ä¸€å€‹é™£åˆ—å…ƒç´ å¯ä»¥å„²å­˜å››å€‹ä½æ•¸ï¼Œä¹Ÿå°±æ˜¯0åˆ°9999çš„æ•¸ï¼Œä¾‹å¦‚ï¼š <br>
+<div style="text-align: center;"><img style="width: 445px; height: 356px;" alt="å¤§æ•¸é‹ç®—" title="å¤§æ•¸é‹ç®—" src="images/bigNumber-1.jpg"><br>
 <br>
-<div style="text-align: left;">«Ü¦h¤H°İ¨ì¦p¦ó­pºâ¹³50!³o¼Ëªº°İÃD¡A¸Ñªk´N¬O¨Ï¥Îµ{¦¡¤¤ªº­¼ªk¨ç¦¡¡A¦Ü©ó­nºâ¨ì¦h¤j¡A´N¬İ»İ¨D¤F¡C<br>
+<div style="text-align: left;">å¾ˆå¤šäººå•åˆ°å¦‚ä½•è¨ˆç®—åƒ50!é€™æ¨£çš„å•é¡Œï¼Œè§£æ³•å°±æ˜¯ä½¿ç”¨ç¨‹å¼ä¸­çš„ä¹˜æ³•å‡½å¼ï¼Œè‡³æ–¼è¦ç®—åˆ°å¤šå¤§ï¼Œå°±çœ‹éœ€æ±‚äº†ã€‚<br>
 <br>
-¦pªG±z¨Ï¥Îªº¬OJava¡A¨º»ò¦bjava.lang¤U¦³BigInteger»PBigDecimal¥i¥Hª½±µ¶i¦æ¤j¼Æ¹Bºâ¡C<br>
+å¦‚æœæ‚¨ä½¿ç”¨çš„æ˜¯Javaï¼Œé‚£éº¼åœ¨java.langä¸‹æœ‰BigIntegerèˆ‡BigDecimalå¯ä»¥ç›´æ¥é€²è¡Œå¤§æ•¸é‹ç®—ã€‚<br>
 <br>
-¥Ñ©ó¨Ï¥Î°}¦C¨ÓÀx¦s¼Æ­È¡AÃö©ó¼Æ­È¦b¹Bºâ®Éªº¥[´î­¼°£µ¥¦UºØ¹Bºâ¡B¦ì¼Æªº¶i¦ì©Î­É¦ì´N¥²¶·¦Û¦æ©w¸q¡A¥[¡B´î¡B­¼³£¬O¥Ñ§C¦ì¼Æ¶}©l¹Bºâ¡A¦Ó°£ªk«h¬O¥Ñ°ª¦ì¼Æ¶}©l¹Bºâ¡A³oÃäª½±µ´£¨Ñ¥[´î­¼°£¹Bºâªº¨ç¦¡¨Ñ§@°Ñ¦Ò¡A¥H¤UªºN¬°°}¦Cªø«×¡C <br>
+ç”±æ–¼ä½¿ç”¨é™£åˆ—ä¾†å„²å­˜æ•¸å€¼ï¼Œé—œæ–¼æ•¸å€¼åœ¨é‹ç®—æ™‚çš„åŠ æ¸›ä¹˜é™¤ç­‰å„ç¨®é‹ç®—ã€ä½æ•¸çš„é€²ä½æˆ–å€Ÿä½å°±å¿…é ˆè‡ªè¡Œå®šç¾©ï¼ŒåŠ ã€æ¸›ã€ä¹˜éƒ½æ˜¯ç”±ä½ä½æ•¸é–‹å§‹é‹ç®—ï¼Œè€Œé™¤æ³•å‰‡æ˜¯ç”±é«˜ä½æ•¸é–‹å§‹é‹ç®—ï¼Œé€™é‚Šç›´æ¥æä¾›åŠ æ¸›ä¹˜é™¤é‹ç®—çš„å‡½å¼ä¾›ä½œåƒè€ƒï¼Œä»¥ä¸‹çš„Nç‚ºé™£åˆ—é•·åº¦ã€‚ <br>
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C </li>
 </ul>
 
-<pre>void add(int *a, int *b, int *c) { <br>    int i, carry = 0; <br><br>    for(i = N - 1; i &gt;= 0; i--) { <br>        c[i] = a[i] + b[i] + carry; <br>        if(c[i] &lt; 10000) <br>            carry = 0; <br>        else { // ¶i¦ì <br>            c[i] = c[i] - 10000; <br>            carry = 1; <br>        } <br>    } <br>} <br><br>void sub(int *a, int *b, int *c) { <br>    int i, borrow = 0; <br><br>    for(i = N - 1; i &gt;= 0; i--) { <br>        c[i] = a[i] - b[i] - borrow; <br>        if(c[i] &gt;= 0) <br>            borrow = 0; <br>        else { // ­É¦ì <br>            c[i] = c[i] + 10000; <br>            borrow = 1; <br>        } <br>    } <br>} <br><br>void mul(int *a, int b, int *c) { // b ¬°­¼¼Æ <br>    int i, tmp, carry = 0; <br><br>    for(i = N - 1; i &gt;=0; i--) { <br>        tmp = a[i] * b + carry; <br>        c[i] = tmp % 10000;    <br>        carry = tmp / 10000; <br>    } <br>} <br><br>void div(int *a, int b, int *c) {  // b ¬°°£¼Æ <br>    int i, tmp, remain = 0; <br><br>    for(i = 0; i &lt; N; i++) { <br>        tmp = a[i] + remain; <br>        c[i] = tmp / b; <br>        remain = (tmp % b) * 10000; <br>    } <br>} <br></pre>
+<pre>void add(int *a, int *b, int *c) { <br>    int i, carry = 0; <br><br>    for(i = N - 1; i &gt;= 0; i--) { <br>        c[i] = a[i] + b[i] + carry; <br>        if(c[i] &lt; 10000) <br>            carry = 0; <br>        else { // é€²ä½ <br>            c[i] = c[i] - 10000; <br>            carry = 1; <br>        } <br>    } <br>} <br><br>void sub(int *a, int *b, int *c) { <br>    int i, borrow = 0; <br><br>    for(i = N - 1; i &gt;= 0; i--) { <br>        c[i] = a[i] - b[i] - borrow; <br>        if(c[i] &gt;= 0) <br>            borrow = 0; <br>        else { // å€Ÿä½ <br>            c[i] = c[i] + 10000; <br>            borrow = 1; <br>        } <br>    } <br>} <br><br>void mul(int *a, int b, int *c) { // b ç‚ºä¹˜æ•¸ <br>    int i, tmp, carry = 0; <br><br>    for(i = N - 1; i &gt;=0; i--) { <br>        tmp = a[i] * b + carry; <br>        c[i] = tmp % 10000;    <br>        carry = tmp / 10000; <br>    } <br>} <br><br>void div(int *a, int b, int *c) {  // b ç‚ºé™¤æ•¸ <br>    int i, tmp, remain = 0; <br><br>    for(i = 0; i &lt; N; i++) { <br>        tmp = a[i] + remain; <br>        c[i] = tmp / b; <br>        remain = (tmp % b) * 10000; <br>    } <br>} <br></pre>
 
 <br>
 
@@ -72,7 +72,7 @@ Gossip@caterpillar</a></h3>
   <li> Java </li>
 </ul>
 
-<pre>public class BigNumber {<br>    public static int[] add(int[] a, int[] b) { <br>        int carry = 0;<br>        int[] c = new int[a.length];<br><br>        for(int i = a.length - 1; i &gt;= 0; i--) { <br>            c[i] = a[i] + b[i] + carry; <br>            if(c[i] &lt; 10000) <br>                carry = 0; <br>            else { // ¶i¦ì <br>                c[i] = c[i] - 10000; <br>                carry = 1; <br>            } <br>        }<br>        <br>        return c;<br>    } <br><br>    public static int[] sub(int[] a, int[] b) { <br>        int borrow = 0; <br>        int[] c = new int[a.length];<br>        <br>        for(int i = a.length - 1; i &gt;= 0; i--) { <br>            c[i] = a[i] - b[i] - borrow; <br>            if(c[i] &gt;= 0) <br>                borrow = 0; <br>            else { // ­É¦ì <br>                c[i] = c[i] + 10000; <br>                borrow = 1; <br>            } <br>        }<br>        <br>        return c;<br>    } <br><br>    public static int[] mul(int[] a, int b) { // b ¬°­¼¼Æ <br>        int carry = 0; <br>        int[] c = new int[a.length];<br>        <br>        for(int i = a.length - 1; i &gt;=0; i--) { <br>            int tmp = a[i] * b + carry; <br>            c[i] = tmp % 10000;    <br>            carry = tmp / 10000; <br>        } <br>        <br>        return c;<br>    } <br><br>    public static int[] div(int[] a, int b) {  // b ¬°°£¼Æ <br>        int remain = 0; <br>        int[] c = new int[a.length];<br><br>        for(int i = 0; i &lt; a.length; i++) { <br>            int tmp = a[i] + remain; <br>            c[i] = tmp / b; <br>            remain = (tmp % b) * 10000; <br>        } <br>        <br>        return c;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] a = {1234, 5678, 9910, 1923, 1124};<br>        int[] b = {1234, 5678, 9910, 1923, 1124};<br>        int[] c = BigNumber.add(a, b);<br>        <br>        for(int i = 0; i &lt; c.length; i++) {<br>            System.out.print(c[i]);<br>        }<br>        System.out.println();<br>    }<br>}</pre>
+<pre>public class BigNumber {<br>    public static int[] add(int[] a, int[] b) { <br>        int carry = 0;<br>        int[] c = new int[a.length];<br><br>        for(int i = a.length - 1; i &gt;= 0; i--) { <br>            c[i] = a[i] + b[i] + carry; <br>            if(c[i] &lt; 10000) <br>                carry = 0; <br>            else { // é€²ä½ <br>                c[i] = c[i] - 10000; <br>                carry = 1; <br>            } <br>        }<br>        <br>        return c;<br>    } <br><br>    public static int[] sub(int[] a, int[] b) { <br>        int borrow = 0; <br>        int[] c = new int[a.length];<br>        <br>        for(int i = a.length - 1; i &gt;= 0; i--) { <br>            c[i] = a[i] - b[i] - borrow; <br>            if(c[i] &gt;= 0) <br>                borrow = 0; <br>            else { // å€Ÿä½ <br>                c[i] = c[i] + 10000; <br>                borrow = 1; <br>            } <br>        }<br>        <br>        return c;<br>    } <br><br>    public static int[] mul(int[] a, int b) { // b ç‚ºä¹˜æ•¸ <br>        int carry = 0; <br>        int[] c = new int[a.length];<br>        <br>        for(int i = a.length - 1; i &gt;=0; i--) { <br>            int tmp = a[i] * b + carry; <br>            c[i] = tmp % 10000;    <br>            carry = tmp / 10000; <br>        } <br>        <br>        return c;<br>    } <br><br>    public static int[] div(int[] a, int b) {  // b ç‚ºé™¤æ•¸ <br>        int remain = 0; <br>        int[] c = new int[a.length];<br><br>        for(int i = 0; i &lt; a.length; i++) { <br>            int tmp = a[i] + remain; <br>            c[i] = tmp / b; <br>            remain = (tmp % b) * 10000; <br>        } <br>        <br>        return c;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] a = {1234, 5678, 9910, 1923, 1124};<br>        int[] b = {1234, 5678, 9910, 1923, 1124};<br>        int[] c = BigNumber.add(a, b);<br>        <br>        for(int i = 0; i &lt; c.length; i++) {<br>            System.out.print(c[i]);<br>        }<br>        System.out.println();<br>    }<br>}</pre>
 <br>
 </div>
 </div>
