--- a/AlgorithmGossip/BinarySearch.htm
+++ b/AlgorithmGossip/BinarySearch.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¤G¤À·j´Mªk¡]·j´M­ì«hªº¥Nªí¡^</title>
+  <title>äºŒåˆ†æœå°‹æ³•ï¼ˆæœå°‹åŸå‰‡çš„ä»£è¡¨ï¼‰</title>
 </head>
 
 
@@ -61,23 +61,23 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¤G¤À·j´Mªk¡]·j´M­ì«hªº¥Nªí¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;äºŒåˆ†æœå°‹æ³•ï¼ˆæœå°‹åŸå‰‡çš„ä»£è¡¨ï¼‰</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¦pªG·j´Mªº¼Æ¦C¤w¸g¦³±Æ§Ç¡AÀ³¸Ó¾¨¶q§Q¥Î¥¦­Ì¤w±Æ§Çªº¯S©Ê¡A¥H´î¤Ö·j´M¤ñ¹ïªº¦¸¼Æ¡A³o¬O·j´Mªº°ò¥»­ì«h¡A¤G¤À·j´Mªk¬O³o­Ó°ò¥»­ì«hªº¥Nªí¡C<br>
+å¦‚æœæœå°‹çš„æ•¸åˆ—å·²ç¶“æœ‰æ’åºï¼Œæ‡‰è©²å„˜é‡åˆ©ç”¨å®ƒå€‘å·²æ’åºçš„ç‰¹æ€§ï¼Œä»¥æ¸›å°‘æœå°‹æ¯”å°çš„æ¬¡æ•¸ï¼Œé€™æ˜¯æœå°‹çš„åŸºæœ¬åŸå‰‡ï¼ŒäºŒåˆ†æœå°‹æ³•æ˜¯é€™å€‹åŸºæœ¬åŸå‰‡çš„ä»£è¡¨ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¦b¤G¤À·j´Mªk¤¤¡A±q¼Æ¦Cªº¤¤¶¡¶}©l·j´M¡A¦pªG³o­Ó¼Æ¤p©ó§Ú­Ì©Ò·j´Mªº¼Æ¡A¥Ñ©ó¼Æ¦C¤w±Æ§Ç¡A«h¸Ó¼Æ¥ªÃäªº¼Æ¤@©w³£¤p©ó­n·j´Mªº¹ï¶H¡A©Ò¥HµL»İ®ö¶O®É¶¡¦b¥ªÃäªº¼Æ¡F¦pªG·j´Mªº¼Æ¤j©ó©Ò·j´Mªº¹ï¶H¡A«h¥kÃäªº¼ÆµL»İ¦A·j´M¡Aª½±µ·j´M¥ªÃäªº¼Æ¡C<br>
+åœ¨äºŒåˆ†æœå°‹æ³•ä¸­ï¼Œå¾æ•¸åˆ—çš„ä¸­é–“é–‹å§‹æœå°‹ï¼Œå¦‚æœé€™å€‹æ•¸å°æ–¼æˆ‘å€‘æ‰€æœå°‹çš„æ•¸ï¼Œç”±æ–¼æ•¸åˆ—å·²æ’åºï¼Œå‰‡è©²æ•¸å·¦é‚Šçš„æ•¸ä¸€å®šéƒ½å°æ–¼è¦æœå°‹çš„å°è±¡ï¼Œæ‰€ä»¥ç„¡éœ€æµªè²»æ™‚é–“åœ¨å·¦é‚Šçš„æ•¸ï¼›å¦‚æœæœå°‹çš„æ•¸å¤§æ–¼æ‰€æœå°‹çš„å°è±¡ï¼Œå‰‡å³é‚Šçš„æ•¸ç„¡éœ€å†æœå°‹ï¼Œç›´æ¥æœå°‹å·¦é‚Šçš„æ•¸ã€‚<br>
 
 <br>
 
-©Ò¥H¦b¤G¤À·j´Mªk¤¤¡A±N¼Æ¦C¤£Â_ªº¤À¬°¨â­Ó³¡¥÷¡A¨C¦¸±q¤À³Îªº³¡¥÷¤¤¨ú¤¤¶¡¼Æ¤ñ¹ï¡A¨Ò¦p­n·j´M92©ó¥H¤Uªº¼Æ¦C¡A­º¥ı¤¤¶¡¼Æ¯Á¤Ş¬°(0+9)/2 = 4¡]¯Á¤Ş¥Ñ0¶}©l¡^¡G<br>
+æ‰€ä»¥åœ¨äºŒåˆ†æœå°‹æ³•ä¸­ï¼Œå°‡æ•¸åˆ—ä¸æ–·çš„åˆ†ç‚ºå…©å€‹éƒ¨ä»½ï¼Œæ¯æ¬¡å¾åˆ†å‰²çš„éƒ¨ä»½ä¸­å–ä¸­é–“æ•¸æ¯”å°ï¼Œä¾‹å¦‚è¦æœå°‹92æ–¼ä»¥ä¸‹çš„æ•¸åˆ—ï¼Œé¦–å…ˆä¸­é–“æ•¸ç´¢å¼•ç‚º(0+9)/2 = 4ï¼ˆç´¢å¼•ç”±0é–‹å§‹ï¼‰ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-family: Courier New,Courier,monospace;">[3 24 57 57 </span><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">67</span><span style="font-family: Courier New,Courier,monospace;"> 68 83 90 92 95]</span><br>
 
@@ -85,7 +85,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¥Ñ©ó67¤p©ó92¡A©Ò¥HÂà·j´M¥kÃäªº¼Æ¦C¡G<br>
+ç”±æ–¼67å°æ–¼92ï¼Œæ‰€ä»¥è½‰æœå°‹å³é‚Šçš„æ•¸åˆ—ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-family: Courier New,Courier,monospace;">3 24 57 57 67 [68 83 </span><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">90</span><span style="font-family: Courier New,Courier,monospace;"> 92 95]</span><br>
 
@@ -93,7 +93,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¥Ñ©ó90¤p©ó92¡A¦A·j´M¥kÃäªº¼Æ¦C¡A³o¦¸´N§ä¨ì©Ò­nªº¼Æ¤F¡G<br>
+ç”±æ–¼90å°æ–¼92ï¼Œå†æœå°‹å³é‚Šçš„æ•¸åˆ—ï¼Œé€™æ¬¡å°±æ‰¾åˆ°æ‰€è¦çš„æ•¸äº†ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-family: Courier New,Courier,monospace;">3 24 57 57 67 68 83 90 [</span><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">92</span><span style="font-family: Courier New,Courier,monospace;"> 95] </span><br>
 
@@ -102,7 +102,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -113,7 +113,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br>int bisearch(int[], int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("¼Æ¦C¡G"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\n¿é¤J´M§ä¹ï¶H¡G"); <br>    scanf("%d", &amp;find); <br><br>    if((i = bisearch(number, find)) &gt;= 0) <br>        printf("§ä¨ì¼Æ¦r©ó¯Á¤Ş %d ", i); <br>    else <br>        printf("\n§ä¤£¨ì«ü©w¼Æ"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int bisearch(int number[], int find) { <br>    int low, mid, upper; <br><br>    low = 0; <br>    upper = MAX - 1; <br><br>    while(low &lt;= upper) { <br>        mid = (low+upper) / 2; <br>        if(number[mid] &lt; find) <br>            low = mid+1; <br>        else if(number[mid] &gt; find) <br>            upper = mid - 1; <br>        else <br>            return mid; <br>    } <br><br>    return -1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // ¦V¥k§ä <br>            while(number[--j] &gt; s) ;  // ¦V¥ª§ä <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>        quicksort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void quicksort(int[], int, int); <br>int bisearch(int[], int); <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 0, MAX-1); <br><br>    printf("æ•¸åˆ—ï¼š"); <br>    for(i = 0; i &lt; MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\nè¼¸å…¥å°‹æ‰¾å°è±¡ï¼š"); <br>    scanf("%d", &amp;find); <br><br>    if((i = bisearch(number, find)) &gt;= 0) <br>        printf("æ‰¾åˆ°æ•¸å­—æ–¼ç´¢å¼• %d ", i); <br>    else <br>        printf("\næ‰¾ä¸åˆ°æŒ‡å®šæ•¸"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int bisearch(int number[], int find) { <br>    int low, mid, upper; <br><br>    low = 0; <br>    upper = MAX - 1; <br><br>    while(low &lt;= upper) { <br>        mid = (low+upper) / 2; <br>        if(number[mid] &lt; find) <br>            low = mid+1; <br>        else if(number[mid] &gt; find) <br>            upper = mid - 1; <br>        else <br>            return mid; <br>    } <br><br>    return -1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // å‘å³æ‰¾ <br>            while(number[--j] &gt; s) ;  // å‘å·¦æ‰¾ <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>        quicksort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>    } <br>} <br></pre>
 
 
 <br>
@@ -127,7 +127,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class BinarySearch {<br>    public static int search(int[] number, int des) {<br>        int low = 0; <br>        int upper = number.length - 1; <br><br>        while(low &lt;= upper) { <br>            int mid = (low+upper) / 2; <br>            if(number[mid] &lt; des) <br>                low = mid+1; <br>            else if(number[mid] &gt; des) <br>                upper = mid - 1; <br>            else <br>                return mid; <br>        } <br><br>        return -1; <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = BinarySearch.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("§ä¨ì¼Æ­È©ó¯Á¤Ş" + find); <br>        else <br>            System.out.println("§ä¤£¨ì¼Æ­È"); <br>    }<br>} </pre>
+<pre>public class BinarySearch {<br>    public static int search(int[] number, int des) {<br>        int low = 0; <br>        int upper = number.length - 1; <br><br>        while(low &lt;= upper) { <br>            int mid = (low+upper) / 2; <br>            if(number[mid] &lt; des) <br>                low = mid+1; <br>            else if(number[mid] &gt; des) <br>                upper = mid - 1; <br>            else <br>                return mid; <br>        } <br><br>        return -1; <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = BinarySearch.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("æ‰¾åˆ°æ•¸å€¼æ–¼ç´¢å¼•" + find); <br>        else <br>            System.out.println("æ‰¾ä¸åˆ°æ•¸å€¼"); <br>    }<br>} </pre>
 
 <br>
 
