--- a/AlgorithmGossip/EightCoins.htm
+++ b/AlgorithmGossip/EightCoins.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>¤KªT»È¹ô</title>
+  <title>å…«æšéŠ€å¹£</title>
 </head>
 
 
@@ -41,33 +41,33 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¤KªT»È¹ô</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å…«æšéŠ€å¹£</a></h1>
 
 
 
-<h2>&nbsp;»¡©ú</h2>
-²{¦³¤KªT»È¹ôa b c d e f g h¡A¤wª¾¨ä¤¤¤@ªT¬O°²¹ô¡A¨ä­«¶q¤£¦P©ó¯u¹ô¡A¦ı¤£ª¾¬O¸û»´©Î¸û­«¡A¦p¦ó¨Ï¥Î¤Ñ¥­¥H³Ì¤Öªº¤ñ¸û¦¸¼Æ¡A¨M©w¥X­şªT¬O°²¹ô¡A¨Ã±oª¾°²¹ô¤ñ¯u¹ô¸û»´©Î¸û­«¡C<br>
-<h2>¸Ñªk</h2>
-³æ´N¨D°²¹ôªº°İÃD¬O¤£Ãø¡A¦ı°İÃD­­¨î¨Ï¥Î³Ì¤Öªº¤ñ¸û¦¸¼Æ¡A©Ò¥H§Ú­Ì¤£¯à¥H³æ¯Âªº°j°é¤ñ¸û¨Ó¨D¸Ñ¡A§Ú­Ì¥i¥H¨Ï¥Î¨Mµ¦¾ğ¡]decision tree¡^¡A¨Ï¥Î¤ÀªR»P¾ğª¬¹Ï¨Ó¨ó§U¨D¸Ñ¡C<br>
+<h2>&nbsp;èªªæ˜</h2>
+ç¾æœ‰å…«æšéŠ€å¹£a b c d e f g hï¼Œå·²çŸ¥å…¶ä¸­ä¸€æšæ˜¯å‡å¹£ï¼Œå…¶é‡é‡ä¸åŒæ–¼çœŸå¹£ï¼Œä½†ä¸çŸ¥æ˜¯è¼ƒè¼•æˆ–è¼ƒé‡ï¼Œå¦‚ä½•ä½¿ç”¨å¤©å¹³ä»¥æœ€å°‘çš„æ¯”è¼ƒæ¬¡æ•¸ï¼Œæ±ºå®šå‡ºå“ªæšæ˜¯å‡å¹£ï¼Œä¸¦å¾—çŸ¥å‡å¹£æ¯”çœŸå¹£è¼ƒè¼•æˆ–è¼ƒé‡ã€‚<br>
+<h2>è§£æ³•</h2>
+å–®å°±æ±‚å‡å¹£çš„å•é¡Œæ˜¯ä¸é›£ï¼Œä½†å•é¡Œé™åˆ¶ä½¿ç”¨æœ€å°‘çš„æ¯”è¼ƒæ¬¡æ•¸ï¼Œæ‰€ä»¥æˆ‘å€‘ä¸èƒ½ä»¥å–®ç´”çš„è¿´åœˆæ¯”è¼ƒä¾†æ±‚è§£ï¼Œæˆ‘å€‘å¯ä»¥ä½¿ç”¨æ±ºç­–æ¨¹ï¼ˆdecision treeï¼‰ï¼Œä½¿ç”¨åˆ†æèˆ‡æ¨¹ç‹€åœ–ä¾†å”åŠ©æ±‚è§£ã€‚<br>
 <br>
-¤@­ÓÂ²³æªºª¬ªp¬O³o¼Ëªº¡A§Ú­Ì¤ñ¸ûa+b+c»Pd+e+f ¡A¦pªG¬Ûµ¥¡A«h°²¹ô¥²¬Og©Îh¡A§Ú­Ì¥ı¤ñ¸ûg©Îh­ş­Ó¸û­«¡A¦pªGg¸û­«¡A¦A»Pa¤ñ¸û¡]a¬O¯u¹ô¡^¡A¦pªGgµ¥©óa¡A«hg¬°¯u¹ô¡A«hh¬°°²¹ô¡A¥Ñ©óh¤ñg»´¦Ó g¬O¯u¹ô¡A«hh°²¹ôªº­«¶q¤ñ¯u¹ô»´¡C<br>
+ä¸€å€‹ç°¡å–®çš„ç‹€æ³æ˜¯é€™æ¨£çš„ï¼Œæˆ‘å€‘æ¯”è¼ƒa+b+cèˆ‡d+e+f ï¼Œå¦‚æœç›¸ç­‰ï¼Œå‰‡å‡å¹£å¿…æ˜¯gæˆ–hï¼Œæˆ‘å€‘å…ˆæ¯”è¼ƒgæˆ–hå“ªå€‹è¼ƒé‡ï¼Œå¦‚æœgè¼ƒé‡ï¼Œå†èˆ‡aæ¯”è¼ƒï¼ˆaæ˜¯çœŸå¹£ï¼‰ï¼Œå¦‚æœgç­‰æ–¼aï¼Œå‰‡gç‚ºçœŸå¹£ï¼Œå‰‡hç‚ºå‡å¹£ï¼Œç”±æ–¼hæ¯”gè¼•è€Œ gæ˜¯çœŸå¹£ï¼Œå‰‡hå‡å¹£çš„é‡é‡æ¯”çœŸå¹£è¼•ã€‚<br>
 <br>
-§¹¾ãªº¤ñ¸û¨Mµ¦¾ğ¦p¤U¹Ï©Ò¥Ü¡G <br>
+å®Œæ•´çš„æ¯”è¼ƒæ±ºç­–æ¨¹å¦‚ä¸‹åœ–æ‰€ç¤ºï¼š <br>
 
 
 
-<div style="text-align: center;"><img style="width: 634px; height: 171px;" alt="¤KªT»È¹ô" title="¤KªT»È¹ô" src="images/eightCoins-1.jpg"><br>
+<div style="text-align: center;"><img style="width: 634px; height: 171px;" alt="å…«æšéŠ€å¹£" title="å…«æšéŠ€å¹£" src="images/eightCoins-1.jpg"><br>
 <br>
 </div>
-¬°¤F¤è«K¨Ï¥Î°j°é¡A¨Ï¥Î¸¹½X0¦Ü7ªí¥Ü»È¹ô¡A½d¨Òµ{¦¡¥i¥HÅı±z¿é¤J°²¹ô­«¶q¡A¦ı±zµLªk¨Æ¥ı±oª¾°²¹ô¬O­ş¤@ªT¡Aµ{¦¡¥i±oª¾°²¹ô¬O­ş¤@ªT¡A¥B¥¦¤ñ¯u¹ô»´©Î­«¡C <br>
-<h2> ¹ê§@</h2>
+ç‚ºäº†æ–¹ä¾¿ä½¿ç”¨è¿´åœˆï¼Œä½¿ç”¨è™Ÿç¢¼0è‡³7è¡¨ç¤ºéŠ€å¹£ï¼Œç¯„ä¾‹ç¨‹å¼å¯ä»¥è®“æ‚¨è¼¸å…¥å‡å¹£é‡é‡ï¼Œä½†æ‚¨ç„¡æ³•äº‹å…ˆå¾—çŸ¥å‡å¹£æ˜¯å“ªä¸€æšï¼Œç¨‹å¼å¯å¾—çŸ¥å‡å¹£æ˜¯å“ªä¸€æšï¼Œä¸”å®ƒæ¯”çœŸå¹£è¼•æˆ–é‡ã€‚ <br>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br> <br>void compare(int[], int, int, int); <br>void eightcoins(int[]); <br> <br>int main(void) { <br>    int coins[8] = {0}; <br>    int i; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; 8; i++) <br>        coins[i] = 10; <br><br>    printf("\n¿é¤J°²¹ô­«¶q(¤ñ10¤j©Î¤p)¡G"); <br>    scanf("%d", &amp;i); <br>    coins[rand() % 8] = i; <br><br>    eightcoins(coins); <br><br>    printf("\n\n¦C¥X©Ò¦³¿ú¹ô­«¶q¡G"); <br>    for(i = 0; i &lt; 8; i++) <br>        printf("%d ", coins[i]); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void compare(int coins[], int i, int j, int k) { <br>    if(coins[i] &gt; coins[k]) <br>        printf("\n°²¹ô %d ¸û­«", i+1); <br>    else <br>        printf("\n°²¹ô %d ¸û»´", j+1); <br>} <br><br>void eightcoins(int coins[]) { <br>    if(coins[0]+coins[1]+coins[2] == <br>       coins[3]+coins[4]+coins[5]) { <br>        if(coins[6] &gt; coins[7]) <br>            compare(coins, 6, 7, 0); <br>        else <br>            compare(coins, 7, 6, 0); <br>    } <br>    else if(coins[0]+coins[1]+coins[2] &gt; <br>            coins[3]+coins[4]+coins[5]) { <br>        if(coins[0]+coins[3] == coins[1]+coins[4]) <br>            compare(coins, 2, 5, 0); <br>        else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>            compare(coins, 0, 4, 1); <br>        if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>            compare(coins, 1, 3, 0); <br>    } <br>    else if(coins[0]+coins[1]+coins[2] &lt;<br>            coins[3]+coins[4]+coins[5]) { <br>        if(coins[0]+coins[3] == coins[1]+coins[4]) <br>            compare(coins, 5, 2, 0); <br>        else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>            compare(coins, 3, 1, 0); <br>        if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>            compare(coins, 4, 0, 1); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br> <br>void compare(int[], int, int, int); <br>void eightcoins(int[]); <br> <br>int main(void) { <br>    int coins[8] = {0}; <br>    int i; <br><br>    srand(time(NULL)); <br><br>    for(i = 0; i &lt; 8; i++) <br>        coins[i] = 10; <br><br>    printf("\nè¼¸å…¥å‡å¹£é‡é‡(æ¯”10å¤§æˆ–å°)ï¼š"); <br>    scanf("%d", &amp;i); <br>    coins[rand() % 8] = i; <br><br>    eightcoins(coins); <br><br>    printf("\n\nåˆ—å‡ºæ‰€æœ‰éŒ¢å¹£é‡é‡ï¼š"); <br>    for(i = 0; i &lt; 8; i++) <br>        printf("%d ", coins[i]); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void compare(int coins[], int i, int j, int k) { <br>    if(coins[i] &gt; coins[k]) <br>        printf("\nå‡å¹£ %d è¼ƒé‡", i+1); <br>    else <br>        printf("\nå‡å¹£ %d è¼ƒè¼•", j+1); <br>} <br><br>void eightcoins(int coins[]) { <br>    if(coins[0]+coins[1]+coins[2] == <br>       coins[3]+coins[4]+coins[5]) { <br>        if(coins[6] &gt; coins[7]) <br>            compare(coins, 6, 7, 0); <br>        else <br>            compare(coins, 7, 6, 0); <br>    } <br>    else if(coins[0]+coins[1]+coins[2] &gt; <br>            coins[3]+coins[4]+coins[5]) { <br>        if(coins[0]+coins[3] == coins[1]+coins[4]) <br>            compare(coins, 2, 5, 0); <br>        else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>            compare(coins, 0, 4, 1); <br>        if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>            compare(coins, 1, 3, 0); <br>    } <br>    else if(coins[0]+coins[1]+coins[2] &lt;<br>            coins[3]+coins[4]+coins[5]) { <br>        if(coins[0]+coins[3] == coins[1]+coins[4]) <br>            compare(coins, 5, 2, 0); <br>        else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>            compare(coins, 3, 1, 0); <br>        if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>            compare(coins, 4, 0, 1); <br>    } <br>} <br></pre>
 
 <br>
 
@@ -76,7 +76,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class Coins {<br>    private int[] coins;<br>    <br>    public Coins() {<br>        coins = new int[8];<br>        for(int i = 0; i &lt; 8; i++) <br>            coins[i] = 10; <br>    }<br>    <br>    public void setFake(int weight) {<br>        coins[(int) (Math.random() * 7)] = weight;<br>    }<br>    <br>    public void fake() {<br>        if(coins[0]+coins[1]+coins[2] == <br>           coins[3]+coins[4]+coins[5]) { <br>            if(coins[6] &gt; coins[7]) <br>                compare(6, 7, 0); <br>            else <br>                compare(7, 6, 0); <br>        } <br>        else if(coins[0]+coins[1]+coins[2] &gt; <br>                coins[3]+coins[4]+coins[5]) { <br>            if(coins[0]+coins[3] == coins[1]+coins[4]) <br>                compare(2, 5, 0); <br>            else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>                compare(0, 4, 1); <br>            if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>                compare(1, 3, 0); <br>        } <br>        else if(coins[0]+coins[1]+coins[2] &lt; <br>                coins[3]+coins[4]+coins[5]) { <br>            if(coins[0]+coins[3] == coins[1]+coins[4]) <br>                compare(5, 2, 0); <br>            else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>                compare(3, 1, 0); <br>            if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>                compare(4, 0, 1); <br>        } <br>    }<br>    <br>    protected void compare(int i, int j, int k) {<br>        if(coins[i] &gt; coins[k]) <br>            System.out.print("\n°²¹ô " + (i+1) + " ¸û­«"); <br>        else <br>            System.out.print("\n°²¹ô " + (j+1) + " ¸û»´"); <br>    }<br>    <br>    public static void main(String[] args) {<br>        if(args.length == 0) {<br>            System.out.println("¿é¤J°²¹ô­«¶q¡]¤ñ10¤j©Î¤p¡^");<br>            System.out.println("ex. java Coins 5");<br>            return;<br>        }<br>        <br>        Coins eightCoins = new Coins();<br>        eightCoins.setFake(Integer.parseInt(args[0]));<br>        eightCoins.fake();<br>    }<br>}</pre>
+<pre>public class Coins {<br>    private int[] coins;<br>    <br>    public Coins() {<br>        coins = new int[8];<br>        for(int i = 0; i &lt; 8; i++) <br>            coins[i] = 10; <br>    }<br>    <br>    public void setFake(int weight) {<br>        coins[(int) (Math.random() * 7)] = weight;<br>    }<br>    <br>    public void fake() {<br>        if(coins[0]+coins[1]+coins[2] == <br>           coins[3]+coins[4]+coins[5]) { <br>            if(coins[6] &gt; coins[7]) <br>                compare(6, 7, 0); <br>            else <br>                compare(7, 6, 0); <br>        } <br>        else if(coins[0]+coins[1]+coins[2] &gt; <br>                coins[3]+coins[4]+coins[5]) { <br>            if(coins[0]+coins[3] == coins[1]+coins[4]) <br>                compare(2, 5, 0); <br>            else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>                compare(0, 4, 1); <br>            if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>                compare(1, 3, 0); <br>        } <br>        else if(coins[0]+coins[1]+coins[2] &lt; <br>                coins[3]+coins[4]+coins[5]) { <br>            if(coins[0]+coins[3] == coins[1]+coins[4]) <br>                compare(5, 2, 0); <br>            else if(coins[0]+coins[3] &gt; coins[1]+coins[4]) <br>                compare(3, 1, 0); <br>            if(coins[0]+coins[3] &lt; coins[1]+coins[4]) <br>                compare(4, 0, 1); <br>        } <br>    }<br>    <br>    protected void compare(int i, int j, int k) {<br>        if(coins[i] &gt; coins[k]) <br>            System.out.print("\nå‡å¹£ " + (i+1) + " è¼ƒé‡"); <br>        else <br>            System.out.print("\nå‡å¹£ " + (j+1) + " è¼ƒè¼•"); <br>    }<br>    <br>    public static void main(String[] args) {<br>        if(args.length == 0) {<br>            System.out.println("è¼¸å…¥å‡å¹£é‡é‡ï¼ˆæ¯”10å¤§æˆ–å°ï¼‰");<br>            System.out.println("ex. java Coins 5");<br>            return;<br>        }<br>        <br>        Coins eightCoins = new Coins();<br>        eightCoins.setFake(Integer.parseInt(args[0]));<br>        eightCoins.fake();<br>    }<br>}</pre>
 <br>
 
 
